Ensured semantic html was optimal for accessibility; added hidden link to skip to main content; ran chrome inspect tool audit for a result of 95 which suggested that the contrast may have not been enough and remedied that.

--- a/style/index.css
+++ b/style/index.css
@@ -6,7 +6,6 @@
   margin:0;
   padding:0;
   max-width:100%;
-  border: solid 1px blue;
 }
 
 html{
@@ -16,8 +15,18 @@ html{
 body{
   font-size: 1.6rem;
   font-family: 'Barlow Condensed', sans-serif;
-  background-color: #597496;
+  background-color: #7fa4d3;
   color:#4E3441;
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 h1{
@@ -158,7 +167,21 @@ background-color:#4E3441;
 
 /* start media queries */
 
-/* styles for 800px tablet width */
+/* begin styling for laptop width 1366×768 */
+@media(max-width: 1366px){
+  .info{
+    margin-top: 0%;
+  }
+  .info p{
+    font-size: 3.5rem;
+  }
+  .project-box img{
+    width: 30rem;
+    height: 30rem;
+  }
+}
+
+/* end styling for laptop and begin styles for 800px tablet width */
 @media(max-width:800px){
   h1{
     text-align: center;
@@ -183,6 +206,7 @@ background-color:#4E3441;
   }
   .info{
     text-align: center;
+    margin-top: 2%;
   }
 
   h2{
@@ -198,6 +222,7 @@ background-color:#4E3441;
   .project-box img{
     height: 35rem;
     width: 35rem;
+    text-align:center;
   }
 }
 
@@ -231,5 +256,24 @@ background-color:#4E3441;
   }
   footer img{
     width:20%;
+    text-align: center;
+  }
+}
+
+/* end standard mobile styling and begin styling for iPhone: 360×640 */
+
+@media(max-width:360px){
+  .info p{
+    font-size: 2.5rem;
+  }
+  .project-box p{
+    font-size: 3rem;
+  }
+  .project-box img{
+    height: 30rem;
+    width: 30rem;
+  }
+  footer p{
+    font-size: 3rem;
   }
 }
